--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
   </head>
   <body>
    <div class="container">
-       <div class="row">
-           <div class="col">
-            <h1>Bienvenido a MasterBolg</h1>
-            <p>Este es el blog de los Geek que disfrutan programar.</p>
+       <div class="row border shadow">
+           <div class="col col-md-8 offset-md-2">
+            <h1 class="text-center">Bienvenido a MasterBolg</h1>
+            <p>Este es el blog de los Geek que disfrutan programar. Aprenderas sobre Frontend,
+                Backend e Informatica.
+            </p>
+            <div class="alert alert-primary text-center" role="alert">
+                Sigue nuestras noticias e informes por twitter
+              </div>
            </div>
        </div>
    </div>
