fusion con header mas codigo faltante

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
        <div class="row border shadow">
            <div class="col col-md-8 offset-md-2">
             <h1 class="text-center">Bienvenido a MasterBolg</h1>
-            <p>Este es el blog de los Geek que disfrutan programar.</p>
+            <p>Este es el blog de los Geek que disfrutan programar. sobre Frontend,
+                 Backend e Informatica</p>
+            <div class="alert alert-primary" role="alert">
+                Sigue nuestras noticias e informes pot twetter
+              </div>
            </div>
        </div>
    </div>
