fusion con header mas codigo faltante

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 class="text-center">Bienvenido a MasterBolg</h1>
             <p>Este es el blog de los Geek que disfrutan programar. sobre Frontend,
                  Backend e Informatica</p>
-            <div class="alert alert-primary" role="alert">
+            <div class="alert alert-primary text-center" role="alert">
                 Sigue nuestras noticias e informes pot twetter
               </div>
            </div>
